@@ -1,6 +1,6 @@
 % File src/library/utils/man/Rtangle.Rd
 % Part of the R package, https://www.R-project.org
-% Copyright 1995-2014 R Core Team
+% Copyright 1995-2016 R Core Team
 % Distributed under GPL 2 or later
 
 \name{Rtangle}
@@ -9,25 +9,32 @@
 \title{R Driver for Stangle}
 \description{
   A driver for \code{\link{Stangle}} that extracts \R code chunks.
+  Notably all \code{RtangleSetup()} arguments may be used as arguments
+  in the \code{\link{Stangle}()} call.
 }
 \usage{
 Rtangle()
 RtangleSetup(file, syntax, output = NULL, annotate = TRUE,
-             split = FALSE, quiet = FALSE, ...)
+             split = FALSE, quiet = FALSE, drop.evalFALSE = FALSE, ...)
 }
 \arguments{
-  \item{file}{Name of Sweave source file.  See the description of the
+  \item{file}{name of Sweave source file.  See the description of the
     corresponding argument of \code{\link{Sweave}}.}
-  \item{syntax}{An object of class \code{SweaveSyntax}.}
-  \item{output}{Name of output file used unless \code{split = TRUE}:
+  \item{syntax}{an object of class \code{SweaveSyntax}.}
+  \item{output}{name of output file used unless \code{split = TRUE}:
     see \sQuote{Details}.}
-  \item{annotate}{By default, code chunks are separated by comment
-    lines specifying the names and numbers of the code chunks.  If
-    \code{FALSE} the decorating comments are omitted.}
-  \item{split}{Split output into a file for each code chunk?}
-  \item{quiet}{If \code{TRUE} all progress messages are suppressed.}
-  \item{\dots}{Additional named arguments setting defaults for further
-    options.}
+  \item{annotate}{a logical or \code{\link{function}}.  When true, as by
+    default, code chunks are separated by comment lines specifying the
+    names and line numbers of the code chunks.
+    If \code{FALSE} the decorating comments are omitted.  Alternatively,
+    \code{annotate} may be a function, see section \sQuote{Chunk annotation}.}
+  \item{split}{split output into a file for each code chunk?}
+  \item{quiet}{logical to suppress all progress messages.}
+  \item{drop.evalFALSE}{logical; When false, as by default, all chunks with
+    option \code{eval = FALSE} are \emph{commented out} in the output;
+    otherwise (\code{drop.evalFALSE = TRUE}) they are omitted entirely.}
+  \item{\dots}{additional named arguments setting defaults for further
+    options listed in \sQuote{Supported Options}.}
 }
 \details{
   Unless \code{split = TRUE}, the default name of the output file is
@@ -40,7 +47,12 @@ RtangleSetup(file, syntax, output = NULL, annotate = TRUE,
   chunk is written to a separate file with extension the name of the
   \sQuote{engine} (default \file{.R}).
 
-  The annotation is of one of the forms%
+  Note that this driver does more than simply extract the code chunks verbatim,
+  because chunks may re-use earlier chunks.
+}
+
+\section{Chunk annotation (\code{annotate})}{
+  By default \code{annotate = TRUE}, the annotation is of one of the forms%
 \preformatted{###################################################
 ### code chunk number 3: viewport
 ###################################################
@@ -53,11 +65,15 @@ RtangleSetup(file, syntax, output = NULL, annotate = TRUE,
 ### code chunk number 19: trellisdata (eval = FALSE)
 ###################################################
 }
-using either the chunk label or the file name and line numbers.
+  using either the chunk label (if present, i.e., when specified in the
+  source) or the file name and line numbers.
 
-  Note that this driver does not simple extract the code chunks verbatim
-  because code chunks can re-use earlier chunks.
+  \code{annotate} may be a function with formal arguments
+  \code{(options, chunk, output)}, e.g. to produce less dominant chunk
+  annotations; see \code{Rtangle()$runcode} how it is called instead of
+  the default.
 }
+
 \section{Supported Options}{
   \code{Rtangle} supports the following options for code chunks (the
   values in parentheses show the default values):
@@ -89,9 +105,30 @@ using either the chunk label or the file name and line numbers.
 \author{Friedrich Leisch and R-core.}
 \seealso{
   \sQuote{\href{../doc/Sweave.pdf}{Sweave User Manual}}, a vignette in
-  the \pkg{utils} package.
+  the \pkg{utils} package.%% ../vignettes/Sweave.Rnw
 
   \code{\link{Sweave}}, \code{\link{RweaveLatex}}
 }
+\examples{
+nmRnw <- "example-1.Rnw"
+exfile <- system.file("Sweave", nmRnw, package = "utils")
+## Create R source file
+Stangle(exfile)
+nmR <- sub("Rnw$", "R", nmRnw) # the (default) R output file name
+if(interactive()) file.show("example-1.R")
+\dontshow{file.rename("example-1.R", "example-1_def.R")}
+## Smaller R source file with custom annotation:
+my.Ann <- function(options, chunk, output) {
+  cat("### chunk #", options$chunknr, ": ",
+      if(!is.null(ol <- options$label)) ol else .RtangleCodeLabel(chunk),
+      if(!options$eval) " (eval = FALSE)", "\n",
+      file = output, sep = "")
+}
+Stangle(exfile, annotate = my.Ann)
+if(interactive()) file.show("example-1.R")
+\dontshow{file.rename("example-1.R", "example-1_myA.R")}
+Stangle(exfile, annotate = my.Ann, drop.evalFALSE=TRUE)
+if(interactive()) file.show("example-1.R")
+\dontshow{file.rename("example-1.R", "example-1_myA-noF.R")}
+}
 \keyword{utilities}
-
